check_output_v14.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
error[E0432]: unresolved import `windows::Win32::UI::Pnp`
  --> crates\engine\src\hid\windows.rs:32:25
   |
32 | use windows::Win32::UI::Pnp::{
   |                         ^^^ could not find `Pnp` in `UI`

error[E0432]: unresolved imports `windows::Win32::Devices::DeviceAndDriverInstallation::RegisterDeviceNotificationW`, `windows::Win32::Devices::DeviceAndDriverInstallation::UnregisterDeviceNotification`, `windows::Win32::Devices::DeviceAndDriverInstallation::HDEVNOTIFY`, `windows::Win32::Devices::DeviceAndDriverInstallation::REGISTER_NOTIFICATION_FLAGS`
  --> crates\engine\src\hid\windows.rs:37:5
   |
37 |     RegisterDeviceNotificationW, UnregisterDeviceNotification, HDEVNOTIFY,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^ no `HDEVNOTIFY` in `Win32::Devices::DeviceAndDriverInstallation`
   |     |                            |
   |     |                            no `UnregisterDeviceNotification` in `Win32::Devices::DeviceAndDriverInstallation`
   |     no `RegisterDeviceNotificationW` in `Win32::Devices::DeviceAndDriverInstallation`
38 |     REGISTER_NOTIFICATION_FLAGS,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `REGISTER_NOTIFICATION_FLAGS` in `Win32::Devices::DeviceAndDriverInstallation`
   |
help: a similar name exists in the module
   |
37 -     RegisterDeviceNotificationW, UnregisterDeviceNotification, HDEVNOTIFY,
37 +     RegisterDeviceNotificationW, CM_Unregister_Notification, HDEVNOTIFY,
   |

warning: unused import: `AvRevertMmThreadCharacteristics`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 2 previous errors; 1 warning emitted
